without-istio/api/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: greeting-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
#  tls:
#  - hosts:
#    - morsley.io # Don't forget to add entry to hosts file for this!
#    secretName: morsley-tls-secret
  rules:
  - host: morsley.io
    http:
      paths:
      - backend:
          serviceName: greeting-service
          servicePort: 5000
#      - path: /api/
#        backend:
#          serviceName: greeting-service
#          servicePort: 5000
